Revert tgwarp again (#37161)
* Reapply "revert tg calib and opencl cleanup (#37113)" (#37115)

This reverts commit 667f3bb32f696b8bdcd93bce9143cd4171e436a3.

* revert msgq too

* msgq on master

--- a/common/SConscript
+++ b/common/SConscript
@@ -5,6 +5,7 @@ common_libs = [
   'swaglog.cc',
   'util.cc',
   'ratekeeper.cc',
+  'clutil.cc',
 ]
 
 _common = env.Library('common', common_libs, LIBS="json11")
