--- a/system/loggerd/SConscript
+++ b/system/loggerd/SConscript
@@ -2,13 +2,16 @@ Import('env', 'arch', 'messaging', 'common', 'visionipc')
 
 libs = [common, messaging, visionipc,
         'avformat', 'avcodec', 'avutil',
-        'yuv', 'pthread', 'zstd']
+        'yuv', 'OpenCL', 'pthread', 'zstd']
 
 src = ['logger.cc', 'zstd_writer.cc', 'video_writer.cc', 'encoder/encoder.cc', 'encoder/v4l_encoder.cc', 'encoder/jpeg_encoder.cc']
 if arch != "larch64":
   src += ['encoder/ffmpeg_encoder.cc']
 
 if arch == "Darwin":
+  # fix OpenCL
+  del libs[libs.index('OpenCL')]
+  env['FRAMEWORKS'] = ['OpenCL']
   # exclude v4l
   del src[src.index('encoder/v4l_encoder.cc')]
 
