update ui job name

--- a/.github/workflows/mici_raylib_ui_preview.yaml
+++ b/.github/workflows/mici_raylib_ui_preview.yaml
@@ -14,7 +14,7 @@ on:
   workflow_dispatch:
 
 env:
-  UI_JOB_NAME: "Create mici raylib UI Report"
+  UI_JOB_NAME: "Create UI Report"
   REPORT_NAME: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' && 'master' || github.event.number }}
   SHA: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' && github.sha || github.event.pull_request.head.sha }}
   BRANCH_NAME: "openpilot/pr-${{ github.event.number }}-mici-raylib-ui"
@@ -58,7 +58,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           run_id: ${{ steps.get_run_id.outputs.run_id }}
           search_artifacts: true
-          name: mici-raylib-report-1-${{ env.REPORT_NAME }}
+          name: ui-report-1-${{ env.REPORT_NAME }}
           path: ${{ github.workspace }}/pr_ui
 
       - name: Getting master ui  # filename: master_ui_raylib/mici_ui_replay.mp4
