--- a/.github/workflows/repo-maintenance.yaml
+++ b/.github/workflows/repo-maintenance.yaml
@@ -6,9 +6,7 @@ on:
   workflow_dispatch:
 
 env:
-  BASE_IMAGE: openpilot-base
-  BUILD: selfdrive/test/docker_build.sh base
-  RUN: docker run --shm-size 2G -v $PWD:/tmp/openpilot -w /tmp/openpilot -e CI=1 -e PYTHONWARNINGS=error -e PYTHONPATH=/tmp/openpilot -e NUM_JOBS -e JOB_ID -e GITHUB_ACTION -e GITHUB_REF -e GITHUB_HEAD_REF -e GITHUB_SHA -e GITHUB_REPOSITORY -e GITHUB_RUN_ID -v $GITHUB_WORKSPACE/.ci_cache/scons_cache:/tmp/scons_cache -v $GITHUB_WORKSPACE/.ci_cache/comma_download_cache:/tmp/comma_download_cache -v $GITHUB_WORKSPACE/.ci_cache/openpilot_cache:/tmp/openpilot_cache $BASE_IMAGE /bin/bash -c
+  PYTHONPATH: ${{ github.workspace }}
 
 jobs:
   update_translations:
@@ -20,8 +18,7 @@ jobs:
           submodules: true
       - uses: ./.github/workflows/setup-with-retry
       - name: Update translations
-        run: |
-          ${{ env.RUN }} "python3 selfdrive/ui/update_translations.py --vanish"
+        run: python3 selfdrive/ui/update_translations.py --vanish
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@c0f553fe549906ede9cf27b5156039d195d2ece0
         with:
@@ -37,18 +34,14 @@ jobs:
   package_updates:
     name: package_updates
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/commaai/openpilot-base:latest
     if: github.repository == 'commaai/openpilot'
     steps:
     - uses: actions/checkout@v6
       with:
         submodules: true
+    - uses: ./.github/workflows/setup-with-retry
     - name: uv lock
-      run: |
-        python3 -m ensurepip --upgrade
-        pip3 install uv
-        uv lock --upgrade
+      run: uv lock --upgrade
     - name: uv pip tree
       id: pip_tree
       run: |
@@ -57,12 +50,10 @@ jobs:
         echo 'EOF' >> $GITHUB_OUTPUT
     - name: bump submodules
       run: |
-        git config --global --add safe.directory '*'
         git submodule update --remote
         git add .
     - name: update car docs
       run: |
-        export PYTHONPATH="$PWD"
         scons -j$(nproc) --minimal opendbc_repo
         python selfdrive/car/docs.py
         git add docs/CARS.md
