show venv size in package update job (#37286)
* show venv size in package update job

* lil more

--- a/.github/workflows/repo-maintenance.yaml
+++ b/.github/workflows/repo-maintenance.yaml
@@ -48,6 +48,20 @@ jobs:
         echo 'PIP_TREE<<EOF' >> $GITHUB_OUTPUT
         uv pip tree >> $GITHUB_OUTPUT
         echo 'EOF' >> $GITHUB_OUTPUT
+    - name: venv size
+      id: venv_size
+      run: |
+        echo 'VENV_SIZE<<EOF' >> $GITHUB_OUTPUT
+        echo "Total: $(du -sh .venv | cut -f1)" >> $GITHUB_OUTPUT
+        echo "" >> $GITHUB_OUTPUT
+        echo "Top 10 by size:" >> $GITHUB_OUTPUT
+        du -sh .venv/lib/python*/site-packages/* 2>/dev/null \
+          | grep -v '\.dist-info' \
+          | grep -v '__pycache__' \
+          | sort -rh \
+          | head -10 \
+          | while IFS=$'\t' read size path; do echo "$size  ${path##*/}"; done >> $GITHUB_OUTPUT
+        echo 'EOF' >> $GITHUB_OUTPUT
     - name: bump submodules
       run: |
         git submodule update --remote
@@ -71,6 +85,12 @@ jobs:
           Automatic PR from repo-maintenance -> package_updates
 
           ```
+          $ du -sh .venv && du -sh .venv/lib/python*/site-packages/* | sort -rh | head -10
+          ${{ steps.venv_size.outputs.VENV_SIZE }}
+          ```
+
+          ```
+          $ uv pip tree
           ${{ steps.pip_tree.outputs.PIP_TREE }}
           ```
         labels: bot
