Revert "Simpler file chunker (#37276)"
This reverts commit b27fa58444766c47f1ef980af79d324a669012c4.

--- a/.gitignore
+++ b/.gitignore
@@ -64,7 +64,8 @@ flycheck_*
 cppcheck_report.txt
 comma*.sh
 
-selfdrive/modeld/models/*.pkl*
+selfdrive/modeld/models/*.pkl
+selfdrive/modeld/models/*.pkl.*
 
 # openpilot log files
 *.bz2
