--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,17 +20,15 @@ dependencies = [
   # core
   "cffi",
   "scons",
-  "pycapnp==2.1.0",
+  "pycapnp",
   "Cython",
   "setuptools",
   "numpy >=2.0",
 
   # body / webrtcd
+  "av",
   "aiohttp",
   "aiortc",
-  # aiortc does not put an upper bound on pyopenssl and is now incompatible
-  # with the latest release
-  "pyopenssl < 24.3.0",
   "pyaudio",
 
   # panda
@@ -90,7 +88,6 @@ testing = [
 ]
 
 dev = [
-  "av",
   "matplotlib",
   "opencv-python-headless",
 ]
