--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,8 +19,6 @@ concurrency:
 
 env:
   CI: 1
-  PYTHONPATH: ${{ github.workspace }}
-  PYTEST: pytest --continue-on-collection-errors --durations=0 -n logical
 
 jobs:
   build_release:
@@ -131,8 +129,8 @@ jobs:
       run: |
         source selfdrive/test/setup_xvfb.sh
         # Pre-compile Python bytecode so each pytest worker doesn't need to
-        $PYTEST --collect-only -m 'not slow' -qq
-        MAX_EXAMPLES=1 $PYTEST -m 'not slow'
+        pytest --collect-only -m 'not slow' -qq
+        MAX_EXAMPLES=1 pytest -m 'not slow'
 
   process_replay:
     name: process replay
@@ -195,7 +193,7 @@ jobs:
       timeout-minutes: 4
       env:
         ONNXCPU: 1
-      run: $PYTEST selfdrive/test/process_replay/test_regen.py
+      run: pytest selfdrive/test/process_replay/test_regen.py
 
   simulator_driving:
     name: simulator driving
